CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

AUX_SOURCE_DIRECTORY( . LIB_SOURCES )
AUX_SOURCE_DIRECTORY( messages LIB_SOURCES )
AUX_SOURCE_DIRECTORY( io LIB_SOURCES )
AUX_SOURCE_DIRECTORY( server LIB_SOURCES )
AUX_SOURCE_DIRECTORY( vfs LIB_SOURCES )
AUX_SOURCE_DIRECTORY( structs LIB_SOURCES )

ADD_LIBRARY( V2StyxServerLibrary STATIC ${LIB_SOURCES} )