CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

AUX_SOURCE_DIRECTORY( . SOURCES )
AUX_SOURCE_DIRECTORY( messages SOURCES )
AUX_SOURCE_DIRECTORY( io SOURCES )
AUX_SOURCE_DIRECTORY( server SOURCES )
AUX_SOURCE_DIRECTORY( vfs SOURCES )
AUX_SOURCE_DIRECTORY( structs SOURCES )

ADD_EXECUTABLE( ../V2StyxServerTest ${SOURCES} )